# multimind-py

./: .gitignore  LICENSE  README.md  pyproject.toml
multimind/: __init__.py  config.py  registry.py  types.py
multimind/backends/: __init__.py  onnx_embed.py  onnx_text.py
multimind/retrain/: __init__.py  pipeline.py  types.py
multimind/signals/: __init__.py  postgres.py  sqlite.py
tests/: test_config.py  test_pipeline.py  test_registry.py  test_retrain.py  test_sqlite.py  test_types.py
