[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multimind"
version = "0.1.0"
description = "Multi-Model Mind Python SDK — model registry, inference, signals, and retrain pipeline."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Digital Forge Studios Inc.", email = "forge@dforge.ca" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "onnxruntime>=1.16",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
retrain = []  # retrain uses only stdlib (threading)
full = ["psycopg2-binary>=2.9"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/digitalforgeca/multimind-py"
Repository = "https://github.com/digitalforgeca/multimind-py"
Issues = "https://github.com/digitalforgeca/multimind-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["multimind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
